--- a/OcalimochoApp/app/src/main/res/layout/activity_pregunta.xml
+++ b/OcalimochoApp/app/src/main/res/layout/activity_pregunta.xml
@@ -48,18 +48,20 @@
         android:gravity="center"
         android:layout_alignParentTop="true">
 
-        <TextView
+        <Button
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/respuesta1"
-            android:textSize="22dp"
+            android:textSize="12dp"
+            android:onClick="respuesta1"
             android:textColor="#000000"
             android:text="respuesta1"/>
-        <TextView
+        <Button
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/respuesta2"
-            android:textSize="22dp"
+            android:textSize="12dp"
+            android:onClick="respuesta2"
             android:textColor="#000000"
             android:text="respuesta2"/>
     </LinearLayout>
@@ -71,18 +73,20 @@
         android:gravity="center"
         android:layout_alignParentTop="true">
 
-        <TextView
+        <Button
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/respuesta3"
-            android:textSize="22dp"
+            android:textSize="12dp"
             android:textColor="#000000"
+            android:onClick="respuesta3"
             android:text="respuesta3"/>
-        <TextView
+        <Button
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:id="@+id/respuesta4"
-            android:textSize="22dp"
+            android:onClick="respuesta4"
+            android:textSize="12dp"
             android:textColor="#000000"
             android:text="respuesta4"/>
     </LinearLayout>
