--- a/OcalimochoApp/app/src/main/res/menu/menu.xml
+++ b/OcalimochoApp/app/src/main/res/menu/menu.xml
@@ -13,4 +13,7 @@
     <item android:id="@+id/new_game" android:title="Nueva partida"
         android:orderInCategory="100" app:showAsAction="never" />
 
+    <item android:id="@+id/options" android:title="Ayuda"
+        android:orderInCategory="100" app:showAsAction="never" />
+
 </menu>
